🐳 Added API endpoint to list containers.
