# api/swagger/swagger.yaml
@@ -26,6 +26,20 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
+  /docker/container:
+    x-swagger-router-controller: container
+    get:
+      description: Retrieve containers
+      operationId: getAllContainers
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/AllContainersResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
   /swagger:
     x-swagger-pipe: swagger_raw
   /backup:
@@ -120,6 +134,65 @@ definitions:
               type: number
             created:
               type: string
+  AllContainersResponse:
+    type: array
+    items:
+      type: object
+      properties:
+        id:
+          type: string
+        name:
+          type: string
+        image:
+          type: object
+          properties:
+            registry:
+              type: string
+            name:
+              type: string
+            version:
+              type: string
+        ports:
+          type: array
+          items:
+            type: object
+            properties:
+              ip:
+                type: string
+              private:
+                type: number
+              public:
+                type: number
+              protocol:
+                type: string
+        networks:
+          type: array
+          items:
+            type: string
+        mounts:
+          type: array
+          items:
+            type: object
+            properties:
+              type:
+                type: string
+              name:
+                type: string
+              source:
+                type: string
+              destination:
+                type: string
+        created:
+          type: object
+          properties:
+            timestamp:
+              type: number
+            display:
+              type: string
+        state:
+          type: string
+        status:
+          type: string
   ErrorResponse:
     required:
       - message
